deployment/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: st-report
  namespace: st-report
  labels:
    app: st-report
spec:
  replicas: 1
  selector:
    matchLabels:
      app: st-report
  template:
    metadata:
      labels:
        app: st-report
    spec:
      volumes:
        - name: streamlit-secret
          secret:
            secretName: streamlit-secret
            defaultMode: 420
      containers:
        - name: st-report
          image: icp.io/st-report:0.1-beta
          ports:
            - containerPort: 8501
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: streamlit-secret
              mountPath: /app/.streamlit
          imagePullPolicy: Always
      restartPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: st-report
  namespace: st-report
  labels:
    app: st-report
spec:
  ports:
    - name: st-report
      protocol: TCP
      port: 8501
      targetPort: 8501
  selector:
    app: st-report
  type: NodePort
# ---
# kind: Ingress
# apiVersion: networking.k8s.io/v1
# metadata:
#   name: st-report
#   namespace: st-report
#   annotations:
#     nginx.ingress.kubernetes.io/proxy-body-size: 2048m
#     nginx.ingress.kubernetes.io/proxy-read-timeout: 3600s
#     nginx.ingress.kubernetes.io/proxy-send-timeout: 3600s
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: report.st.lcovje.top
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: st-report
#                 port:
#                   number: 8501
