deployment/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: st-report
  namespace: st-report
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: 3600s
    nginx.ingress.kubernetes.io/proxy-send-timeout: 3600s
spec:
  ingressClassName: nginx
  rules:
    - host: report.st.lcovje.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: st-report
                port:
                  number: 8501
